k8slearn/5.Kubernetes 网络/5.6.Traefik/Manifest/6.Traefik 私有插件/Middleware-my-private-plugin.yaml
# Middleware-my-private-plugin.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: my-private-plugin
spec:
  plugin:
    plugindemo:  # 插件名
      Headers:
        X-Demo: private-demo
        Foo: bar
