k8slearn/5.Kubernetes 网络/5.6.Traefik/Manifest/6.Traefik 私有插件/ingressroute-demo.yaml
# ingressroute-demo.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-demo
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`who.qikqiak.com`) && PathPrefix(`/notls`)
      kind: Rule
      services:
        - name: whoami # K8s Service
          port: 80
      middlewares:
        - name: my-private-plugin # 使用上面新建的 middleware
